--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="../CSS/style.scss" rel="stylesheet" />
- </head>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">The YAY Company</a>
@@ -47,7 +47,12 @@
         </div>
         <div class="form-group">
             <label for="exampleFormControlInput1">Website</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text" id="btnGroupAddon">http://</div>
+              </div>
+              <input type="text" class="form-control" aria-describedby="btnGroupAddon">
+            </div>
         </div>
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Message</label>
@@ -55,7 +60,14 @@
         </div>
       </form>
     </div>
-    <div class="col-sm"></div>
+    <div class="col-sm">
+      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+      </svg>
+      <a href="#">hello@yay.com</a>
+    </div>
+    <button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
+
     </div>
       </div>
       <footer>
