--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,12 +4,14 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Home page</title>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-     <link href="../CSS/bootstrap.css" rel="stylesheet" />
+     <link href="../CSS/style.css" rel="stylesheet" />
+     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
 </head>
     <body>
         <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">The YAY Company</a>
+            <a class="navbar-brand" href="index.html">The YAY Company</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,12 +48,40 @@
               </div>
             </div>
           </div>
-          <div class="container-md">
+          <div class="container-sm">
             <h3>We do YAY things</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            <p>Nam tincidunt, sapien nec congue porta, tellus risus ullamcorper mi, a rutrum justo eros pretium libero. Nullam vel enim id mauris eleifend finibus et ac orci. Aliquam metus massa, aliquam quis arcu sit amet, consectetur faucibus urna. Suspendisse massa diam, efficitur eu massa euismod, pretium lacinia magna. Donec mi orci, sollicitudin in luctus a, varius eget massa.
 
             </p>
-          
+            <div class="card text-center">
+              <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">First</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Second</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Third</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="row">
+                <div class="col">
+              <div class="card-body">
+                <img src="../Picture/Tab images/tab-1.jpg">
+              </div>
+            </div>
+              <div class="col">
+                <p class="card-text">Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a. Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed condimentum mattis rhoncus. </p>
+                <div><i class="fa fa-twitter"></i> 
+                  <i class="fa fa-facebook"></i>
+                <a href="#">SHARE</a>
+              </div>
+                </div>
+            </div>
+            </div>
           </div>
         </div>
         <footer>
