--- a/HTML/news.html
+++ b/HTML/news.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
     <link href="../CSS/style.scss" rel="stylesheet" />
  </head>
  <body>
@@ -32,23 +34,122 @@
           </form>
         </div>
       </nav>
-    <div class="container-sm">
-        100% wide until small breakpoint
+    <div class="container">
+        <h2>News</h2>
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <label class="btn btn-secondary active">
+            <input type="radio" name="options" id="option1" checked> 1
+          </label>
+          <label class="btn btn-secondary">
+            <input type="radio" name="options" id="option2"> 2
+          </label>
+          <label class="btn btn-secondary">
+            <input type="radio" name="options" id="option3"> 3
+          </label>
+          <label class="btn btn-secondary">
+            <input type="radio" name="options" id="option4"> 4
+          </label>
+        </div>
         <div class="row">
-            <div class="col-sm">
-              One of three columns
+          <div class="col-md-6 col-lg-3">
+            <div class="card">
+                <div class="card-img-top embed-responsive embed-responsive-4by3" style="background-image: url(../Picture/News\ images/news-1.jpg);"></div>
+                <div class="card-body">
+                    <h5 class="card-title">Nunc porttitor vel</h5>
+                    <p class="card-text">Nunc malesuada eget est fringilla dapibus.</p>
+                    <a href="#" class="btn btn-primary">More</a>
+                </div>
             </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card">
+              <div class="card-img-top embed-responsive embed-responsive-4by3" style="background-image: url(../Picture/News\ images/news-2.jpg);"></div>
+              <div class="card-body">
+                  <h5 class="card-title">Nunc porttitor vel</h5>
+                  <p class="card-text">Nunc malesuada eget est fringilla dapibus.</p>
+                  <a href="#" class="btn btn-primary">More</a>
+              </div>
           </div>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <div class="card">
+            <div class="card-img-top embed-responsive embed-responsive-4by3" style="background-image: url(../Picture/News\ images/news-3.jpg);"></div>
+            <div class="card-body">
+                <h5 class="card-title">Nunc porttitor vel</h5>
+                <p class="card-text">Nunc malesuada eget est fringilla dapibus.</p>
+                <a href="#" class="btn btn-primary">More</a>
+            </div>
+        </div>
     </div>
-     
-    <footer>
-        <p>sadsad</p>
+    <div class="col-md-6 col-lg-3">
+      <div class="card">
+          <div class="card-img-top embed-responsive embed-responsive-4by3" style="background-image: url(../Picture/News\ images/news-4.jpg);"></div>
+          <div class="card-body">
+              <h5 class="card-title">Nunc porttitor vel</h5>
+              <p class="card-text">Some quick example text to build on the Product title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">More</a>
+          </div>
+      </div>
+  </div>
+  <div class="col-md-6 col-lg-3">
+    <div class="card">
+        <div class="card-img-center embed-responsive embed-responsive-4by3" style="background-image: url(../Picture/News\ images/news-5.jpg);"></div>
+        <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">Nunc malesuada eget est fringilla dapibus.</p>
+            <a href="#" class="btn btn-primary">More</a>
+        </div>
+    </div>
+</div>
+<div class="col-md-6 col-lg-3">
+  <div class="card">
+      <div class="card-img-top embed-responsive embed-responsive-4by3" style="background-image: url(../Picture/News\ images/news-6.jpg);"></div>
+      <div class="card-body">
+          <h5 class="card-title">Nunc porttitor vel</h5>
+          <p class="card-text">Nunc malesuada eget est fringilla dapibus.</p>
+          <a href="#" class="btn btn-primary">More</a>
+      </div>
+  </div>
+</div>
+<div class="col-md-6 col-lg-3">
+  <div class="card">
+      <div class="card-img- embed-responsive embed-responsive-4by3" style="background-image: url(../Picture/News\ images/news-7.jpg);"></div>
+      <div class="card-body">
+          <h5 class="card-title">Nunc porttitor vel</h5>
+          <p class="card-text">Nunc malesuada eget est fringilla dapibus.</p>
+          <a href="#" class="btn btn-primary">More</a>
+      </div>
+  </div>
+</div>
+<div class="col-md-6 col-lg-3">
+  <div class="card">
+      <div class="card-img-top embed-responsive embed-responsive-4by3" style="background-image: url(../Picture/News\ images/news-8.jpg);"></div>
+      <div class="card-body">
+          <h5 class="card-title">Nunc porttitor vel</h5>
+          <p class="card-text">Some quick example text to build on the Product title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">More</a>
+      </div>
+  </div>
+</div>
+<div class="btn-group btn-group-toggle" data-toggle="buttons">
+  <label class="btn btn-secondary active">
+    <input type="radio" name="options" id="option1" checked> 1
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="option2"> 2
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="option3"> 3
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="option4"> 4
+  </label>
+</div>
+</div>
+    <footer> 
+      <div><i class="fa fa-twitter"></i> <i class="fa fa-vimeo"></i></div>
+      <a href="#">hello@yay.com</a>
+      <p>Copyright2020</p>
  </footer>
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
